# snakemake_executor_plugin_mpcdf

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-please.yml
snakemake_executor_plugin_cluster_sync/: __init__.py
snakemake_executor_plugin_mpcdf/: __init__.py
tests/: tests.py
