[tool.poetry]
name = "snakemake-executor-plugin-cluster-sync"
version = "0.1.1"
description = "A Snakemake executor plugin for cluster jobs that are executed synchronously."
authors = ["Johannes Koester <johannes.koester@uni-due.de>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-cluster-sync"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/cluster-sync.html"
keywords = ["snakemake", "plugin", "executor", "cluster"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.0"
snakemake-interface-executor-plugins = "^8.1.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^7.4.1"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
