[tool.poetry]
name = "snakemake-executor-plugin-mpcdf"
version = "0.1.0"
description = "A Snakemake executor plugin for cluster jobs on MPCDF."
authors = ["Kevin Murray <foss@kdmurray.id.au>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/snakemake/snakemake-executor-plugin-cluster-sync"
documentation = "https://snakemake.github.io/snakemake-plugin-catalog/plugins/executor/cluster-sync.html"
keywords = ["snakemake", "plugin", "executor", "cluster"]

[tool.poetry.dependencies]
python = "^3.11"
snakemake-interface-common = "^1.14.0"
snakemake-interface-executor-plugins = "^9.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.1.0"
coverage = "^7.3.1"
pytest = "^8.3.3"
snakemake = {git = "https://github.com/snakemake/snakemake.git"}

[tool.coverage.run]
omit = [".*", "*/site-packages/*", "Snakefile"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
